--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-05-13 07:12-0500\n"
+"POT-Creation-Date: 2009-05-13 11:34-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -20,8 +20,8 @@ msgstr ""
 msgid "GRNET Federation,<br />Authentication & Authorization Infrastructure"
 msgstr "Ομοσπονδία ΕΔΕΤ,<br />Υποδομή Ταυτοποίησης & Εξουσιοδότησης (AAI)"
 
-#: wayf/templates/base.html:68 wayf/templates/support.html:3
-#: wayf/templates/support_fail.html:3
+#: wayf/templates/base.html:68 wayf/templates/list.html:3
+#: wayf/templates/support.html:3 wayf/templates/support_fail.html:3
 msgid "User support"
 msgstr "Υποστήριξη Χρηστών"
 
@@ -40,6 +40,13 @@ msgstr "Προσωπικά Δεδομένα"
 #: wayf/templates/index.html:3
 msgid "About"
 msgstr "Γενικές Πληροφορίες"
+
+#: wayf/templates/list.html:6
+#, python-format
+msgid ""
+"\n"
+"%(idplist)s\n"
+msgstr ""
 
 #: wayf/templates/support.html:5
 msgid ""
@@ -66,6 +73,24 @@ msgstr ""
 "Παρουσιάστηκε πρόβλημα κατά τη χρήση της υποδομής ταυτοποίησης και "
 "εξουσιοδότησης του ΕΔΕΤ. Επιπλέον, δε βρέθηκαν στοιχεία επικοινωνίας με το "
 "οικείο ίδρυμα."
+
+msgid "Universities"
+msgstr "Πανεπιστήμια"
+
+msgid "Technological Educational Institutes"
+msgstr "Τεχνολογικά Εκπαιδευτικά Ιδρύματα"
+
+msgid "Research Institutes"
+msgstr "Ερευνητικά Ινστιτούτα"
+
+msgid "Other"
+msgstr "Άλλοι φορείς"
+
+msgid "Testing"
+msgstr "Δοκιμαστικοί φορείς"
+
+msgid "Other federations"
+msgstr "Άλλες ομοσπονδίες"
 
 #~ msgid "You selected the IdP of"
 #~ msgstr "Επιλέξατε τον Identity Provider του ιδρύματος"
