--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -8,13 +8,21 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-05-14 04:26-0500\n"
+"POT-Creation-Date: 2009-05-18 12:00+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+
+#: wayf/templates/404.html:3
+msgid "Page not found"
+msgstr "Η σελίδα δε βρέθηκε"
+
+#: wayf/templates/404.html:5
+msgid "The page you requested could not be found!"
+msgstr "Λυπούμαστε, η σελίδα που ζητήσατε δε βρέθηκε."
 
 #: wayf/templates/base.html:67
 msgid "GRNET Federation<br />Authentication & Authorization Infrastructure"
@@ -67,17 +75,24 @@ msgstr ""
 "εξουσιοδότησης του ΕΔΕΤ. Επιπλέον, δε βρέθηκαν στοιχεία επικοινωνίας με το "
 "οικείο ίδρυμα."
 
-#: wayf/templates/wayf.html:3 wayf/templates/wayf_set.html:3
+#: wayf/templates/wayf.html:3
 msgid "Permanently set your Home Organization"
 msgstr "Επιλογή οικείου φορέα"
 
-#: wayf/templates/wayf.html:16
-msgid "Confirm"
-msgstr "Επιβεβαίωση"
+#: wayf/templates/wayf.html:15
+msgid "Save Selection"
+msgstr ""
 
-#: wayf/templates/wayf_set.html:8
+#: wayf/templates/wayf_set.html:3
+msgid "Select your home institution"
+msgstr "Επιλογή οικείου φορέα"
+
+#: wayf/templates/wayf_set.html:14
 msgid "Clear"
 msgstr "Καθαρισμός"
+
+msgid "Confirm"
+msgstr "Επιβεβαίωση"
 
 msgid "Universities"
 msgstr "Πανεπιστήμια"
