Template cleanup: merged FAQ with help/support, added IdP list page

--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -72,7 +72,7 @@ msgid ""
 "The Greek Research and Technology Network (GRNET) provides the Hellenic "
 "Academic, Research and Education community with advanced services, high-"
 "capacity national and international Internet connectivity, assisting the "
-"operation of all Universities, Technologial Educational Institutions and "
+"operation of all Universities, Technological Educational Institutions and "
 "Research Institutes in Greece."
 msgstr ""
 "Το Εθνικό Δίκτυο Έρευνας και Τεχνολογίας (ΕΔΕΤ) παρέχει στην ελληνική "
@@ -153,3 +153,6 @@ msgstr "Άλλες ομοσπονδίες"
 
 msgid "You selected the IdP of"
 msgstr "Επιλέξατε τον Identity Provider του ιδρύματος"
+
+msgid "Participants"
+msgstr "Συμμετέχοντες φορείς"
