Template cleanup, split main page into index, services and documentation

--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -155,4 +155,7 @@ msgid "You selected the IdP of"
 msgstr "Επιλέξατε τον Identity Provider του ιδρύματος"
 
 msgid "Participants"
-msgstr "Συμμετέχοντες φορείς"
+msgstr "Φορείς"
+
+msgid "Services"
+msgstr "Υπηρεσίες"
