--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -86,20 +86,23 @@ msgstr "Επιλογή οικείου φορέα"
 msgid "Universities"
 msgstr "Πανεπιστήμια"
 
-msgid "Technological Educational Institutes"
-msgstr "Τεχνολογικά Εκπαιδευτικά Ιδρύματα"
+msgid "Technological educational institutes"
+msgstr "Τεχνολογικά εκπαιδευτικά ιδρύματα"
 
-msgid "Research Institutes"
-msgstr "Ερευνητικά Ινστιτούτα"
+msgid "Ecclesiastical schools"
+msgstr "Ανώτατες εκκλησιαστικές ακαδημίες"
+
+msgid "Other academic institutions"
+msgstr "Άλλα ανώτατα εκπαιδευτικά ιδρύματα"
+
+msgid "Research institutes"
+msgstr "Ερευνητικά ινστιτούτα"
 
 msgid "Other"
 msgstr "Άλλοι φορείς"
 
 msgid "Testing"
 msgstr "Δοκιμαστικοί φορείς"
-
-msgid "Other federations"
-msgstr "Άλλες ομοσπονδίες"
 
 msgid "You selected the IdP of"
 msgstr "Επιλέξατε τον Identity Provider του ιδρύματος"
