Minor update to the footer text

--- a/locale/el/LC_MESSAGES/django.po
+++ b/locale/el/LC_MESSAGES/django.po
@@ -59,8 +59,8 @@ msgid ""
 msgstr ""
 "Το Εθνικό Δίκτυο Έρευνας και Τεχνολογίας (ΕΔΕΤ) παρέχει στην ελληνική "
 "ακαδημαϊκή, ερευνητική και εκπαιδευτική κοινότητα προηγμένες υπηρεσίες "
-"εθνικής διασύνδεσης Internet υψηλής χωρητικότητας εξυπηρετώντας όλα τα ΑΕΙ, "
-"ΤΕΙ και Ερευνητικά Κέντρα της χώρας."
+"εθνικής διασύνδεσης Internet υψηλής χωρητικότητας εξυπηρετώντας όλα τα "
+"Πανεπιστήμια, ΤΕΙ και Ερευνητικά Κέντρα της χώρας."
 
 msgid "Telephone"
 msgstr "Τηλέφωνο"
